# my-project

./: CMStart.sh  README.md  args.yaml  detect_voc.py  detect_voc_gui.py  generate_dataset_existing_track.py  results.csv  simple_dataset_gen.py  train_fs_cones.py  train_voc_lowmem.py  voc_to_yolo.py
Data/Config/: DVA  FSAI.lcfg  Plugins  Preferences.sce  Project
Data/Misc/: ModelCheck
Data/Road/: FS_autonomous_TrackDrive.rd5  Massivetrack.rd5  boa_constrictor.rd5  bone.rd5  comp_2021.rd5  comp_2024.rd5  garden_light.rd5  hairpins_increasing_difficulty.rd5  its_a_mess.rd5  oval.rd5  oval_weave.rd5  peanut.rd5  rand.rd5  rectangle.rd5  small_silverstone.rd5  small_track.rd5
Data/Script/: generate_cones_2m.tcl  generate_cones_3m.tcl  generate_cones_5m.tcl
Data/TestRun/: bone  (+15 more)
Movie/: Camera.cfg
Plugins/: PlugInterfaces
TrackGen/: Do_Not_Change.rd5  EUFS_Trimmed.py  TrackGen.py  UNUSED_randomTrackGen.py  readme.txt  requirements.txt
fs_race_ml/: deploy_model.py  fs_carmaker_env.py  start_autonomous_driving.sh  train_rl.py  train_simple_supervised.py  train_supervised.py
ros/ros2_ws/src/uwe_ipg_rqt/: README.md  package.xml  plugin.xml  setup.cfg  setup.py
ros/ros2_ws/src/uwe_ipg_rqt/config/: uwe_ipg_sim.perspective
ros/ros2_ws/src/uwe_ipg_rqt/resource/: MissionControlGUI.ui  UWEIpgRobotSteeringGUI.ui  UWERobotSteeringGUI.ui
ros/ros2_ws/src/uwe_ipg_rqt/scripts/: uwe_ipg_robot_steering_gui
ros/ros2_ws/src/uwe_ipg_rqt/src/uwe_ipg_rqt/: UWEIpgRobotSteeringGUI.py
src/: CM_Main.c  CM_Vehicle.c  Makefile  User.c  cmenv.m
src_cm4sl/: Makefile  app_tmp.c
(+30 files in other folders)
